--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^4.1.1",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "sinon": "^3.2.0",
+    "sinon-chai": "^2.13.0"
   }
 }
